<resources>
    <string name="menu_add_to_calendar">Add to calendar</string>
    <string name="button_close">Close</string>
    <string name="button_view">View</string>
    <string name="button_templates">Templates</string>
    <string name="type_to_reply_text_enter_to_send">Type to reply</string>
    <string name="toast_sending_message">Sending message</string>
    <string name="qm_quick_reply">Reply</string>
    <string name="qm_mark_read">Read</string>
    <string name="message_counter">%1$d of %2$d</string>
    <string name="pref_title_notification_privacy_mode_enabled">Privacy mode</string>
    <string name="pref_summary_notification_privacy_mode_enabled">"Hide sender and message in status bar and disable 'Quick reply'"</string>
    <string name="notification_single_title_privacy_mode">New message</string>
    <string name="notification_single_text_privacy_mode">1 unread message</string>
    <string name="notification_multiple_title_privacy_mode">New messages</string>
    <string name="notification_multiple_text_privacy_mode">%1$s unread messages</string>
    <string name="notification_ticker_privacy_mode">New message received</string>
    <string name="pref_quickmessage">Quick reply</string>
    <string name="pref_dark_theme_title">Use dark theme</string>
    <string name="pref_dark_theme_summary">"If not selected, the default 'light' theme will be used"</string>
    <string name="pref_quickmessage_title">Show pop-up</string>
    <string name="pref_quickmessage_summary">Display the QuickMessage pop-up for incoming SMS messages</string>
    <string name="pref_wake_unlock_title">Wake and unlock</string>
    <string name="pref_wake_unlock_summary">Wake and unlock device on incoming message (insecure lock screens only)</string>
    <string name="pref_close_all_title">Close all</string>
    <string name="pref_close_all_summary">Close button closes all messages</string>
    <string name="prefs_templates_settings">SMS templates</string>
    <string name="pref_title_templates_manage">Templates</string>
    <string name="pref_summary_templates_manage">Manage your SMS templates</string>
    <string name="template_explanation">Insert or modify the template text and optionally draw a gesture to associate it</string>
    <string name="template_insert_hint">Insert here the template text</string>
    <string name="template_empty_text">Text field cannot be empty</string>
    <string name="template_save">Save</string>
    <string name="template_edit">Edit</string>
    <string name="template_delete">Delete</string>
    <string name="template_list_title">Templates</string>
    <string name="template_new_title">New template</string>
    <string name="template_insert">Insert template</string>
    <string name="template_gesture_draw">Draw the gesture in the space below</string>
    <string name="template_not_present_error">There are no defined templates</string>
    <string name="template_not_present_error_title">Error</string>
    <string name="template_select">Select a template</string>
    <string name="template_confirm_dialog_title">Delete?</string>
    <string name="gestures_already_present">A similar gesture is already associated with another template</string>
    <string name="select_template">Select templates</string>
    <string name="pref_title_templates_show_gesture">Gesture</string>
    <string name="pref_summary_templates_show_gesture">Show gesture trace</string>
    <string name="pref_title_template_gestures_sensitivity">Gesture sensitivity</string>
    <string name="pref_extra_settings">Extra settings</string>
    <string name="pref_title_unicode_stripping">Strip unicode</string>
    <string name="pref_unicode_stripping_leave_intact">Leave characters intact</string>
    <string name="pref_unicode_stripping_non_encodable">Strip non-encodable characters</string>
    <string name="pref_unicode_stripping_all">Strip all unicode characters</string>
    <string name="pref_title_mms_full_timestamp">Full timestamps</string>
    <string name="pref_summary_mms_full_timestamp">Display both date and time in timestamps</string>
    <string name="pref_title_mms_use_sent_timestamp">Original timestamps</string>
    <string name="pref_summary_mms_use_sent_timestamp">Display sent date instead of received date in timestamps</string>
    <string name="pref_title_input_type">Soft keyboard type</string>
    <string name="pref_keyboard_emoji">Show the Emoticons key</string>
    <string name="pref_keyboard_new_line">Show the Enter key</string>
    <string name="pref_keyboard_unknown">Unknown, please reselect</string>
    <string name="pref_title_sms_split_counter">Split counter</string>
    <string name="pref_summary_sms_split_counter">Adds counter to message ex. (1/2)</string>
    <string name="blacklist_title">Blacklist</string>
    <string name="blacklist_summary_disabled">Disabled</string>
    <string name="blacklist_summary">Incoming messages from phone numbers in the blacklist will be blocked</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="add_to_blacklist_message">Future messages from %s will be blocked</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="menu_as_unread">Mark as unread</string>
    <string name="menu_all_as_unread">Mark all as unread</string>
    <string name="confirm_mark_unread_dialog_title">Mark as unread?</string>
    <string name="confirm_mark_unread_all_conversations">All threads will be marked as unread.</string>
    <string name="select_recipients">Select recipients</string>
    <string name="groups_header">Groups</string>
    <string name="no_recipients">No contacts found</string>
    <string name="no_recipients_mobile_only">"No matching contacts found. Try without the 'Mobile numbers only' filter"</string>
    <string name="menu_done">Done</string>
    <string name="menu_mobile">Mobile numbers only</string>
    <string name="menu_groups">Show groups</string>
    <string name="fastscroll_index_groups">GR</string>
    <string name="pref_title_send_delay">Delivery delay</string>
    <string name="send_delay_immediate">Send immediately</string>
    <string name="send_delay_3seconds">3 seconds</string>
    <string name="send_delay_5seconds">5 seconds</string>
    <string name="send_delay_10seconds">10 seconds</string>
    <string name="send_delay_20seconds">20 seconds</string>
    <string name="send_delay_30seconds">30 seconds</string>
    <string name="sent_countdown">Message delivery countdown</string>
    <string name="pref_title_mms_notification_vibrate_pattern">Vibrate pattern</string>
    <string name="pref_summary_mms_notification_vibrate_pattern">Change vibrate pattern</string>
    <string name="pref_mms_notification_vibrate_normal">Normal</string>
    <string name="pref_mms_notification_vibrate_med_vib">Medium vibrate</string>
    <string name="pref_mms_notification_vibrate_long_vib">Long vibrate</string>
    <string name="pref_mms_notification_vibrate_mult_short">Multiple short</string>
    <string name="pref_mms_notification_vibrate_mult_long">Multiple long</string>
    <string name="menu_insert_smiley">Insert smiley</string>
    <string name="pref_title_enable_emoticons">Emoticons support</string>
    <string name="pref_summary_enable_emoticons">Substitute text emoticons with graphical equivalents</string>
    <string name="cannot_play">Cannot present the slide show.</string>
    <string name="menu_conversation_options">Conversation options</string>
    <string name="pref_title_reset_convopt_to_default">Reset to default</string>
    <string name="pref_summary_reset_convopt_to_default">Resets the conversation setting to the application level setting</string>
    <string name="failed_open_associated_activity_msg">Failed to open associated activity</string>
    <string name="cell_broadcast_sender">Cell broadcast channel</string>
    <string name="disk_storage_full_error">Error: Storage is full.</string>
    <string name="system_audio_item">System audio</string>
    <string name="external_audio_item">External audio</string>
    <string name="pending_mms_title">Pending MMS on other subscription</string>
    <string name="pending_mms">Messaging: One or more MMS are pending</string>
    <string name="pending_mms_text">Touch to switch the subscription</string>
    <string name="abort_mms">Messaging: Abort MMS</string>
    <string name="abort_mms_text">Touch to abort and switch back</string>
    <string name="progress_mms_title">MMS transaction on other sub in progress</string>
    <string name="progress_mms">Messaging: MMS in progress…</string>
    <string name="progress_mms_text">Touch to retry</string>
    <string name="app_label">Messaging</string>
    <string name="new_message">New message</string>
    <string name="menu_call_back">Call %s</string>
    <string name="menu_send_email">Send email to %s</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="done">Return</string>
    <string name="remove_slide">Remove slide</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="preview">Preview</string>
    <string name="replace_image">Replace picture</string>
    <string name="type_to_compose_text_or_leave_blank">Type message, or leave blank</string>
    <string name="play">Play</string>
    <string name="pref_notification_settings_title">Notifications</string>
    <string name="pref_mms_settings_title">Multimedia (MMS) messages</string>
    <string name="pref_sms_settings_title">Text (SMS) messages</string>
    <string name="pref_sms_storage_title">Storage</string>
    <string name="pref_title_sms_disabled">SMS Disabled</string>
    <string name="pref_summary_sms_disabled">Touch to make Messaging your default SMS app</string>
    <string name="pref_title_sms_enabled">SMS Enabled</string>
    <string name="pref_summary_sms_enabled">Touch to change your default SMS app</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit">%1$s messages per conversation</string>
    <string name="pref_summary_mms_group_mms">Use MMS to send a single message when there are multiple recipients</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_group_mms">Group messaging</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_title_notification_ringtone">Sound</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
</resources>