<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="pref_key_root"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:persistent="false" android:title="@string/pref_title_sms_disabled" android:key="pref_key_sms_disabled" android:summary="@string/pref_summary_sms_disabled">
        <intent android:targetPackage="com.android.settings" android:action="android.provider.Telephony.ACTION_CHANGE_DEFAULT">
            <extra android:name="package" android:value="com.android.mms" />
        </intent>
    </Preference>
    <Preference android:persistent="false" android:title="@string/pref_title_sms_enabled" android:key="pref_key_sms_enabled" android:summary="@string/pref_summary_sms_enabled">
        <intent android:targetPackage="com.android.settings" android:action="android.settings.WIRELESS_SETTINGS" />
    </Preference>
    <PreferenceCategory android:title="@string/pref_sms_storage_title" android:key="pref_key_storage_settings">
        <CheckBoxPreference android:title="@string/pref_title_auto_delete" android:key="pref_key_auto_delete" android:summary="@string/pref_summary_auto_delete" android:defaultValue="false" />
        <Preference android:persistent="false" android:title="@string/pref_title_sms_delete" android:key="pref_key_sms_delete_limit" android:summary="@string/pref_summary_delete_limit" android:dependency="pref_key_auto_delete" />
        <Preference android:persistent="false" android:title="@string/pref_title_mms_delete" android:key="pref_key_mms_delete_limit" android:summary="@string/pref_summary_delete_limit" android:dependency="pref_key_auto_delete" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sms_settings_title" android:key="pref_key_sms_settings">
        <ListPreference android:persistent="true" android:entries="@array/send_delay_duration_entries" android:title="@string/pref_title_send_delay" android:key="pref_key_send_delay" android:defaultValue="0" android:dialogTitle="@string/pref_title_send_delay" android:entryValues="@array/send_delay_duration_values" />
        <CheckBoxPreference android:title="@string/pref_title_sms_delivery_reports" android:key="pref_key_sms_delivery_reports" android:summary="@string/pref_summary_sms_delivery_reports" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_sms_split_counter" android:key="pref_key_sms_split_counter" android:summary="@string/pref_summary_sms_split_counter" android:defaultValue="false" />
        <Preference android:title="@string/pref_title_manage_sim_messages" android:key="pref_key_manage_sim_messages" android:summary="@string/pref_summary_manage_sim_messages" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_mms_settings_title" android:key="pref_key_mms_settings">
        <CheckBoxPreference android:title="@string/pref_title_mms_group_mms" android:key="pref_key_mms_group_mms" android:summary="@string/pref_summary_mms_group_mms" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_mms_delivery_reports" android:key="pref_key_mms_delivery_reports" android:summary="@string/pref_summary_mms_delivery_reports" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_mms_read_reports" android:key="pref_key_mms_read_reports" android:summary="@string/pref_summary_mms_read_reports" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_mms_auto_retrieval" android:key="pref_key_mms_auto_retrieval" android:summary="@string/pref_summary_mms_auto_retrieval" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_mms_retrieval_during_roaming" android:key="pref_key_mms_retrieval_during_roaming" android:summary="@string/pref_summary_mms_retrieval_during_roaming" android:dependency="pref_key_mms_auto_retrieval" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notification_settings_title" android:key="pref_key_notification_settings">
        <CheckBoxPreference android:title="@string/pref_title_notification_enabled" android:key="pref_key_enable_notifications" android:defaultValue="true" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/pref_title_notification_privacy_mode_enabled" android:key="pref_key_enable_privacy_mode" android:summary="@string/pref_summary_notification_privacy_mode_enabled" android:dependency="pref_key_enable_notifications" android:defaultValue="false" />
        <RingtonePreference android:title="@string/pref_title_notification_ringtone" android:key="pref_key_ringtone" android:dependency="pref_key_enable_notifications" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" />
        <CheckBoxPreference android:title="@string/pref_title_notification_vibrateWhen" android:key="pref_key_vibrate" android:dependency="pref_key_enable_notifications" android:defaultValue="false" />
        <ListPreference android:entries="@array/pref_mms_notification_vibrate_pattern_entries" android:title="@string/pref_title_mms_notification_vibrate_pattern" android:key="pref_key_mms_notification_vibrate_pattern" android:summary="@string/pref_summary_mms_notification_vibrate_pattern" android:dependency="pref_key_vibrate" android:defaultValue="" android:dialogTitle="@string/pref_title_mms_notification_vibrate_pattern" android:entryValues="@array/pref_mms_notification_vibrate_pattern_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_quickmessage">
        <CheckBoxPreference android:title="@string/pref_dark_theme_title" android:key="pref_dark_theme" android:summary="@string/pref_dark_theme_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_quickmessage_title" android:key="pref_key_quickmessage" android:summary="@string/pref_quickmessage_summary" android:dependency="pref_key_enable_notifications" android:defaultValue="false" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/pref_wake_unlock_title" android:key="pref_key_qm_lockscreen" android:summary="@string/pref_wake_unlock_summary" android:dependency="pref_key_quickmessage" android:defaultValue="false" />
        <CheckBoxPreference android:layout="?android:preferenceLayoutChild" android:title="@string/pref_close_all_title" android:key="pref_key_close_all" android:summary="@string/pref_close_all_summary" android:dependency="pref_key_quickmessage" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_templates_settings">
        <Preference android:persistent="false" android:title="@string/pref_title_templates_manage" android:key="pref_key_templates_manage" android:summary="@string/pref_summary_templates_manage" />
        <CheckBoxPreference android:title="@string/pref_title_templates_show_gesture" android:key="pref_key_templates_show_gesture" android:summary="@string/pref_summary_templates_show_gesture" android:defaultValue="false" />
        <ListPreference android:entries="@array/pref_templates_gestures_sensitivity_entries" android:title="@string/pref_title_template_gestures_sensitivity" android:key="pref_key_templates_gestures_sensitivity" android:entryValues="@array/pref_templates_gestures_sensitivity_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_extra_settings" android:key="pref_key_extra_settings">
        <PreferenceScreen android:persistent="false" android:title="@string/blacklist_title" android:key="pref_blacklist">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.Settings$BlacklistSettingsActivity" />
        </PreferenceScreen>
        <ListPreference android:entries="@array/pref_unicode_stripping_entries" android:title="@string/pref_title_unicode_stripping" android:key="pref_key_unicode_stripping" android:entryValues="@array/pref_unicode_stripping_values" />
        <CheckBoxPreference android:title="@string/pref_title_enable_emoticons" android:key="pref_key_enable_emoticons" android:summary="@string/pref_summary_enable_emoticons" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_mms_full_timestamp" android:key="pref_key_mms_full_timestamp" android:summary="@string/pref_summary_mms_full_timestamp" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_mms_use_sent_timestamp" android:key="pref_key_mms_use_sent_timestamp" android:summary="@string/pref_summary_mms_use_sent_timestamp" android:defaultValue="false" />
        <ListPreference android:entries="@array/pref_entries_input_type" android:title="@string/pref_title_input_type" android:key="pref_key_mms_input_type" android:entryValues="@array/pref_values_input_type" />
    </PreferenceCategory>
</PreferenceScreen>