<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/template_explanation" />
    <EditText android:id="@id/template_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:hint="@string/template_insert_hint" android:maxLines="3" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/template_gesture_draw" />
    <android.gesture.GestureOverlayView android:id="@id/gestures_overlay" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:gestureStrokeType="multiple" />
</LinearLayout>