<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.ImageAttachmentView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/image_attachment_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/attachment_editor_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingRight="5.0dip">

    <ImageView
        android:id="@id/image_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:maxHeight="300.0dip" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="8.0dip">

        <Button
            android:id="@id/view_image_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100.0dip"
            android:layout_height="45.0dip"
            android:text="@string/view"
            android:textColor="@color/button_text" />

        <Button
            android:id="@id/replace_image_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100.0dip"
            android:layout_height="45.0dip"
            android:text="@string/replace"
            android:textColor="@color/button_text" />

        <Button
            android:id="@id/remove_image_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100.0dip"
            android:layout_height="45.0dip"
            android:text="@string/remove"
            android:textColor="@color/button_text" />
    </LinearLayout>
</com.android.mms.ui.ImageAttachmentView>