<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.BasicSlideEditorView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/slide_editor_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@*android:drawable/editbox_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:id="@id/image"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:background="@*android:drawable/picture_frame" />

            <LinearLayout
                android:id="@id/audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mms_music" />

                <TextView
                    android:id="@id/audio_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@id/controler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@id/pre_slide_button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="50.0dip"
                    android:src="@drawable/ic_maps_back" />

                <ImageButton
                    android:id="@id/next_slide_button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="50.0dip"
                    android:src="@drawable/ic_maps_next" />
            </LinearLayout>

            <Button
                android:id="@id/preview_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/preview" />

            <Button
                android:id="@id/replace_image_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/replace_image" />

            <Button
                android:id="@id/remove_slide_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/remove_slide" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="2.0dip">

        <EditText
            android:id="@id/text_message"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:autoText="true"
            android:capitalize="sentences"
            android:hint="@string/type_to_compose_text_or_leave_blank"
            android:maxLines="1"
            android:nextFocusRight="@id/done_button"
            android:paddingBottom="5.0dip"
            android:paddingLeft="5.0dip"
            android:paddingRight="5.0dip"
            android:paddingTop="5.0dip"
            android:textSize="15.0sp">

            <requestFocus />
        </EditText>

        <Button
            android:id="@id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusLeft="@id/text_message"
            android:text="@string/done" />
    </LinearLayout>
</com.android.mms.ui.BasicSlideEditorView>